@@ -7,7 +7,7 @@ ACLOCAL_AMFLAGS = -I ../aclocal
 ## spfatal is not included for now
 SUBDIRS = sp01 sp02 sp03 sp04 sp05 sp06 sp07 sp08 sp09 sp11 sp12 sp13 sp14 \
     sp15 sp16 sp17 sp19 sp20 sp21 sp22 sp23 sp24 sp25 sp26 sp27 sp28 sp29 \
-    sp30 sp31 sp32 sp33 sp34 sp35 sp44 spsize 
+    sp30 sp31 sp32 sp33 sp34 sp35 sp44 sp46 spsize 
 DIST_SUBDIRS = $(SUBDIRS) spfatal
 
 include $(top_srcdir)/../automake/subdirs.am
