@@ -1,0 +1,28 @@
+##
+## $Id$
+##
+
+MANAGERS = all
+
+rtems_tests_PROGRAMS = sp46.exe
+sp46_exe_SOURCES = init.c
+
+dist_rtems_tests_DATA = sp46.scn
+dist_rtems_tests_DATA += sp46.doc
+
+include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
+include $(top_srcdir)/../automake/compile.am
+include $(top_srcdir)/../automake/leaf.am
+
+sp46_exe_LDADD = $(MANAGERS_NOT_WANTED:%=$(PROJECT_LIB)/no-%.rel)
+
+AM_CPPFLAGS += -I$(top_srcdir)/../support/include
+
+LINK_OBJS = $(sp46_exe_OBJECTS) $(sp46_exe_LDADD)
+LINK_LIBS = $(sp46_exe_LDLIBS)
+
+sp46.exe$(EXEEXT): $(sp46_exe_OBJECTS) $(sp46_exe_DEPENDENCIES)
+	@rm -f sp46.exe$(EXEEXT)
+	$(make-exe)
+
+include $(top_srcdir)/../automake/local.am
