@@ -1,3 +1,10 @@
+2008-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	PR 1348/cpukit
+	* Makefile.am, configure.ac: Add test of special case of resetting cpu
+	usage information while a period is running.
+	* sp46/.cvsignore, sp46/Makefile.am, sp46/init.c, sp46/sp46.doc: New files.
+
 2008-08-05	Xudong Guan <xudong.guan@criticalsoftware.com>
 
 	PR 1212/cpukit
